Closed Bug 1875657 Opened 2 years ago Closed 2 years ago

Crash in [@ mozilla::Monitor::Lock]

Categories

(Core :: Graphics: Canvas2D, defect, P3)

defect

Tracking

()

RESOLVED FIXED
123 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox122 --- unaffected
firefox123 --- fixed

People

(Reporter: aosmond, Assigned: aosmond)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/894e7727-149b-4288-9acb-deac40240115

Reason: SIGSEGV / SEGV_MAPERR

Top 10 frames of crashing thread:

0  libc.so.6  ___pthread_mutex_lock  nptl/nptl/pthread_mutex_lock.c:80
1  firefox-bin  mozilla::detail::MutexImpl::mutexLock  mozglue/misc/Mutex_posix.cpp:94
1  firefox-bin  mozilla::detail::MutexImpl::lock  mozglue/misc/Mutex_posix.cpp:116
2  libxul.so  mozilla::OffTheBooksMutex::Lock  xpcom/threads/Mutex.h:66
2  libxul.so  mozilla::Monitor::Lock  xpcom/threads/Monitor.h:31
2  libxul.so  mozilla::detail::BaseMonitorAutoLock<mozilla::Monitor>::BaseMonitorAutoLock  xpcom/threads/Monitor.h:129
2  libxul.so  mozilla::layers::RemoteTextureMap::UnregisterTextureOwners  gfx/layers/RemoteTextureMap.cpp:696
3  libxul.so  mozilla::layers::RemoteTextureOwnerClient::UnregisterAllTextureOwners  gfx/layers/RemoteTextureMap.cpp:77
4  libxul.so  mozilla::layers::CanvasTranslator::ClearTextureInfo  gfx/layers/ipc/CanvasTranslator.cpp:1096
5  libxul.so  mozilla::detail::RunnableMethodArguments<>::apply<mozilla::layers::CanvasTranslator, void  const  xpcom/threads/nsThreadUtils.h:1164

Looks like a shutdown crash, where the RemoteTextureMap is already gone away, while the CanvasTranslator has yet to go away.

Flags: needinfo?(aosmond)
OS: Unspecified → Linux
Hardware: Unspecified → Desktop

We need to complete shutdown synchronously from
CanvasTranslator::ActorDestroy as once it completes, we may destroy the
RemoteTextureMap.

Flags: needinfo?(aosmond)
OS: Linux → All
Hardware: Desktop → All
Assignee: nobody → aosmond
Status: NEW → ASSIGNED
Severity: -- → S3
Priority: -- → P3
Pushed by aosmond@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0361c1f29bab Ensure that we run CanvasTranslator::FinishShutdown without dispatching from task queue. r=gfx-reviewers,lsalzman
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 123 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: