Bug 1875657 - Ensure that we run CanvasTranslator::FinishShutdown without dispatching from task queue. r=gfx-reviewers,lsalzman

We need to complete shutdown synchronously from
CanvasTranslator::ActorDestroy as once it completes, we may destroy the
RemoteTextureMap.

Differential Revision: https://phabricator.services.mozilla.com/D199185